# telltale

./: .gitignore  README.md  prompt_plan.md  spec.md
src/: README.md  config.py  dev-sailing-data.sqlite  pyproject.toml  run.py
src/app/: __init__.py
src/app/forms/: __init__.py  auth.py  boat.py  race.py  sailing.py
src/app/models/: __init__.py  boat.py  maneuver.py  race.py  race_mark.py  race_segment.py  sailing_data.py  sailing_session.py  track_point.py  user.py
src/app/routes/: __init__.py  auth.py  errors.py  main.py  races.py  sailing.py
src/app/static/css/: dashboard.css  style.css
src/app/static/js/: dashboard.js  main.js
src/app/templates/: about.html  base.html  dashboard.html  index.html  settings.html
src/app/templates/auth/: account.html  login.html  register.html  reset_password.html  reset_password_request.html  reset_request.html
src/app/templates/errors/: 403.html
src/app/templates/main/: dashboard.html  index.html
src/app/templates/races/: index.html  upload.html  view.html
src/app/utils/: file_utils.py  gpx_processor.py
src/migrations/versions/: 2790a58153a1_add_race_analysis_models.py  850f56794e15_replace_sailingsession_with_race_and_.py  cbb8f9ad5db8_initial_migration.py
